Add Accordion Field

--- a/main.scss
+++ b/main.scss
@@ -67,3 +67,4 @@ body {
 @import "components/carousel";
 @import "components/illustrationText";
 @import "components/backPurple";
+@import "components/twoIllustrations";
