--- a/main.css
+++ b/main.css
@@ -49,6 +49,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;500&display=swap");
 *,
 ::before,
 ::after {
@@ -1092,6 +1093,9 @@ body {
   color: white;
   line-height: 4rem;
   margin-bottom: 0;
+}
+.mainTitle--inverted p {
+  margin-top: 0;
 }
 .mainTitle--noMargins {
   max-width: 100%;
@@ -2195,6 +2199,11 @@ body {
   font-weight: 500;
 }
 
+.boldOrange {
+  font-weight: 500;
+  color: #EC5B00;
+}
+
 .two-columns-wrapper {
   background-color: #F6F4F9;
   padding-top: 8rem;
@@ -3026,6 +3035,35 @@ html {
   margin-top: 1rem;
   transition: 0.5s ease-in-out;
 }
+.downloadsNav__items--faq button {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0;
+  transition: 0.5s ease-in-out;
+  background-color: transparent;
+  border: 1px solid #004394;
+  cursor: pointer;
+  padding: 1rem;
+}
+.downloadsNav__items--faq button.active {
+  background-color: #004394;
+  color: white;
+}
+.downloadsNav__items--faq button:hover {
+  background-color: #004394;
+  color: white;
+}
+.downloadsNav__items--faq button:hover img {
+  filter: brightness(400);
+}
+.downloadsNav__items--faq button img {
+  width: 35%;
+  height: 35%;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
+  transition: 0.5s ease-in-out;
+}
 
 @media (max-width: 540px) {
   .downloadsNav {
@@ -3224,7 +3262,7 @@ html {
 }
 
 .accordion__column__item:after {
-  content: url("../../assets/img/accordion-plus.svg");
+  content: url("../pflegekammer-wahlkampagne/assets/img/accordion-plus.svg");
   font-size: 3.5rem;
   color: #004394;
   float: right;
@@ -3235,7 +3273,7 @@ html {
 }
 
 .accordion__column__item.active:after {
-  content: url("../../assets/img/accordion-minus.svg");
+  content: url("../pflegekammer-wahlkampagne/assets/img/accordion-minus.svg");
   transform: scale(0.5) rotate(-180deg);
   color: #004394;
   transition: 0.5s;
@@ -4551,6 +4589,22 @@ div.accordion__column__item__panel p {
   font-weight: 500;
   margin-top: 0;
 }
+.illustrationText__text__item .p-check {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  margin-top: 0;
+}
+.illustrationText__text__item .p-check::before {
+  content: url("../../assets/img/check.svg");
+  margin-right: 1rem;
+  margin-top: 0.2rem;
+}
+.illustrationText__text__item .p-check::after {
+  content: url("../../assets/img/infoBlue.svg");
+  margin-left: 0.5rem;
+  transform: scale(1.2);
+}
 .illustrationText__text__item .p-bullet {
   position: relative;
   margin-left: 1rem;
@@ -4563,7 +4617,7 @@ div.accordion__column__item__panel p {
   left: -1rem;
   top: 0.5rem;
 }
-.illustrationText img {
+.illustrationText .illustration {
   width: 100%;
   height: 100%;
   object-fit: contain;
@@ -4585,6 +4639,9 @@ div.accordion__column__item__panel p {
   grid-template-columns: 1fr 1fr;
   gap: 3rem;
   align-items: center;
+}
+.backPurple__content--onlyText {
+  align-items: flex-start;
 }
 .backPurple__content__pic {
   width: 100%;
@@ -4617,6 +4674,42 @@ div.accordion__column__item__panel p {
 .backPurple__content__text__item .paragraph {
   color: white;
   margin-top: 0;
+}
+.backPurple__content__text__item .paragraph a {
+  color: white;
+}
+
+.twoIllustrations {
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+}
+.twoIllustrations__content {
+  max-width: 80%;
+  padding: 0.5rem 2rem;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 4rem;
+}
+.twoIllustrations__content__item {
+  display: flex;
+  flex-direction: column;
+}
+.twoIllustrations__content__item img {
+  width: 80%;
+  height: 80%;
+  object-fit: contain;
+  object-position: center;
+}
+.twoIllustrations__content__item__text .title {
+  color: #42259A;
+  font-weight: 500;
+  font-size: 1.56rem;
+  margin: 0;
+  margin: 2rem 0 0 0;
+}
+.twoIllustrations__content__item__text .description {
+  margin: 0.5rem 0 0 0;
 }
 
 /*# sourceMappingURL=main.css.map */
